processed/jira/txt/LU/LU-19748.txt
Key:        LU-19748
Summary:    gni build fixes for 2.17
Link:       https://jira.whamcloud.com/browse/LU-19748
Type:       Bug
Priority:   Medium
Status:     Open
Resolution: Unresolved
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Fri, 2 Jan 2026 12:27:49 +0000
Updated:    Tue, 17 Feb 2026 19:31:02 +0000

--- Description ---
Build fixes for GNI

libcfs/linux/linux-mem.h -> lustre_compat/linux/linux-mem.h

libcfs/linux/linux-misc.h -> lustre_compat/linux/linux-misc.h

__ll_vmalloc() -> __compat_vmalloc()

missing semi-colon after:

  ENUM2STR(GNI_RC_SUCCESS)

GNI needs to include:

  lustre_compat/linux/timer.h

  linux/libcfs/libcfs_fail.h

Build fix: -Werror=maybe-uninitialized

  .../lustre/mgc/mgc_request.c: In function 'mgc_create_new_conn':

  .../include/linux/libcfs/libcfs_debug.h:122:3: error: 'rc' may be \

  used uninitialized in this function [-Werror=maybe-uninitialized]

      libcfs_debug_msg(&msgdata, format, ## _VA_ARGS_); \

      ^~~~~~~~~~~~~~~~

  .../lustre/mgc/mgc_request.c:1208:6: note: 'rc' was declared here

     int rc;

         ^~

Include  in HAVE_SET_POSIX_ACL_USER_NS build test

to ensure 'struct inode' is defined.

--- Comment (gerrit, Tue, 17 Feb 2026 19:31:02 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/63216/

Subject: LU-19748 gni: build fixes for gni

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: cd049d0a0d3c5124f5fa927ecc757e9de7fc9b6b

--- Comment (gerrit, Fri, 2 Jan 2026 12:34:07 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/63216

Subject: LU-19748 gni: build fixes for gni

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 3f26b55d2aea0a3bd2b1c641bb527d57e0b0f1d5
